--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,6 +1,5 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:Library_3._0.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:Class="Library_3._0.Views.MainWindow"
@@ -45,8 +44,12 @@
                     <TextBlock FontWeight="Bold" VerticalAlignment="Center">Returns</TextBlock>
 				</StackPanel>
             </Button>
-            <!-- Add more buttons for additional pages -->
-
+			<Button Width="200" Height="40" VerticalAlignment="Bottom" Content="Exit" Click="Exit">
+				<StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Exit</TextBlock>
+				</StackPanel>
+            </Button>
+           
         </StackPanel>
 
         <!-- Content Area -->
