--- a/Views/Borrowers.axaml
+++ b/Views/Borrowers.axaml
@@ -71,14 +71,14 @@
 
 		<!-- Buttons -->
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10">
-			<Button Margin="10,0" Width="200" Content="Add Borrower">
+			<Button Margin="10,0" Click="AddBorrower" Width="200" Content="Add Borrower">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 					<Image Margin="0,0,5,0" Width="20" Height="20" Source="/Assets/add.png"/>
 					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Add Borrower</TextBlock>
 				</StackPanel>
 			</Button>
 			<!--Command="{Binding AddBookCommand}"-->
-			<Button Width="200" Content="Modify Borrower">
+			<Button Width="200" Click="EditBorrower" Content="Modify Borrower">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 					<Image Margin="0,0,5,0" Width="20" Height="20" Source="/Assets/edit.png"/>
 					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Modify Borrower</TextBlock>
