--- a/Views/Loans.axaml
+++ b/Views/Loans.axaml
@@ -90,14 +90,14 @@
 
 		<!-- Buttons -->
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10">
-			<Button Margin="10,0" Width="150" Content="Create Loan">
+			<Button Click="CreateLoan" Margin="10,0" Width="150" Content="Create Loan">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 					<Image Margin="0,0,5,0" Width="20" Height="20" Source="/Assets/add.png"/>
 					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Create Loan</TextBlock>
 				</StackPanel>
 			</Button>
 			<!--Command="{Binding AddBookCommand}"-->
-			<Button Width="150" Content="Modify Loan">
+			<Button Click="EditLoan" Width="150" Content="Modify Loan">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 					<Image Margin="0,0,5,0" Width="20" Height="20" Source="/Assets/edit.png"/>
 					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Modify Loan</TextBlock>
