--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -44,9 +44,10 @@
                     <TextBlock FontWeight="Bold" VerticalAlignment="Center">Returns</TextBlock>
 				</StackPanel>
             </Button>
-			<Button Width="200" Height="40" VerticalAlignment="Bottom" Content="Exit" Click="Exit">
-				<StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-					<TextBlock FontWeight="Bold" VerticalAlignment="Center">Exit</TextBlock>
+			<Button VerticalAlignment="Bottom" Width="200" Height="40" Content="Exit" Click="Exit">
+				<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+					<Image Margin="25,0,5,0" Width="20" Height="20" Source="/Assets/exit.png"/>
+                   <TextBlock FontWeight="Bold" VerticalAlignment="Center">Exit</TextBlock>
 				</StackPanel>
             </Button>
            
